{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 3,
  "lineage": "5aa5eda8-5332-8d3c-d698-32f5592d8142",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apploadbalancer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517859833938:security-group/sg-06485725cda11b767",
            "description": "Allow 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06485725cda11b767",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apploadbalancer-sg",
            "name_prefix": "",
            "owner_id": "517859833938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apploadbalancer-sg-80"
            },
            "tags_all": {
              "Name": "apploadbalancer-sg-80"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bde5a6bb06a5cb93"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517859833938:security-group/sg-084ef840fa0872f24",
            "description": "Allow 80 inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084ef840fa0872f24",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06485725cda11b767"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instances-sg",
            "name_prefix": "",
            "owner_id": "517859833938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instances-sg-80-from-alb"
            },
            "tags_all": {
              "Name": "instances-sg-80-from-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bde5a6bb06a5cb93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apploadbalancer-sg"
          ]
        }
      ]
    }
  ]
}